Fix: remove unused files array

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "analyze"
   ],
   "main": "index.js",
-  "files": [
-    "lib"
-  ],
+  "files": [],
   "scripts": {
     "test": "eslint **/*.js && mocha",
     "preversion": "npm test",
