--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "index.js",
   "files": [],
   "scripts": {
-    "test": "eslint **/*.js && mocha",
+    "test": "eslint \"**/*.js\" && c8 --reporter lcov mocha",
     "preversion": "npm test",
     "postversion": "git push --follow-tags && npm publish"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "acorn": "^6.1.1",
     "acorn-dynamic-import": "^4.0.0",
+    "c8": "^5.0.1",
     "eslint": "^5.16.0",
     "mocha": "^6.1.4"
   },
