--- a/package.json
+++ b/package.json
@@ -13,23 +13,22 @@
   "main": "index.js",
   "files": [],
   "scripts": {
-    "test": "eslint \"**/*.js\" && c8 --reporter lcov mocha",
+    "test": "eslint \"**/*.js\" && c8 --reporter lcov mocha -b",
     "preversion": "npm test",
     "postversion": "git push --follow-tags && npm publish"
   },
-  "repository": "eight04/cjs-es",
+  "repository": "eight04/es-info",
   "author": "eight04 <eight04@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "acorn": "^6.1.1",
-    "acorn-dynamic-import": "^4.0.0",
-    "c8": "^5.0.1",
-    "eslint": "^5.16.0",
-    "mocha": "^6.1.4"
+    "acorn": "^8.8.0",
+    "c8": "^7.12.0",
+    "eslint": "^8.21.0",
+    "mocha": "^10.0.0"
   },
   "dependencies": {
-    "estree-walker": "^0.6.1",
-    "is-reference": "^1.1.2",
-    "rollup-pluginutils": "^2.8.1"
+    "@rollup/pluginutils": "^4.2.1",
+    "estree-walker": "^3.0.1",
+    "is-reference": "^3.0.0"
   }
 }
